Bug fix: Image blur overflow and distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ h1 {
 #game-image {
     height: 192px;
     width: 288px;
+    overflow: hidden;
 }
 
 img {
